--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 	<section class="destacados">
-		<h2>Productos Descatados</h3>
 		<div class="container ">
+			<h2>Productos Descatados</h3>
 			<div class="destacados--container">
 				<article class="destacado">
 					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
@@ -43,15 +43,14 @@
 							$39.00
 						</div>
 					</div>
-				</article>
-
-				<article class="destacado">
-					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
-					<div class="destacado--description">
-						<h4 class="destacado--title">lalalala</h4>
-						<div class="destacado--price">
-							$39.00
-						</div>
+					<div class="rating rating-destacado">
+					  <div class="stars stars-destacado">
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star"></a>
+					    <a class="star"></a>
+					  </div>
 					</div>
 				</article>
 
@@ -63,6 +62,15 @@
 							$39.00
 						</div>
 					</div>
+					<div class="rating rating-destacado">
+					  <div class="stars stars-destacado">
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star"></a>
+					    <a class="star"></a>
+					  </div>
+					</div>
 				</article>
 
 				<article class="destacado">
@@ -72,6 +80,34 @@
 						<div class="destacado--price">
 							$39.00
 						</div>
+					</div>
+					<div class="rating rating-destacado">
+					  <div class="stars stars-destacado">
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star"></a>
+					    <a class="star"></a>
+					  </div>
+					</div>
+				</article>
+
+				<article class="destacado">
+					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
+					<div class="destacado--description">
+						<h4 class="destacado--title">lalalala</h4>
+						<div class="destacado--price">
+							$39.00
+						</div>
+					</div>
+					<div class="rating rating-destacado">
+					  <div class="stars stars-destacado">
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star"></a>
+					    <a class="star"></a>
+					  </div>
 					</div>
 				</article>
 			</div>
@@ -83,7 +119,6 @@
 			  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample57.jpg" alt="sample57" />
 			  <figcaption>
 			    <h3>Pudol Doux</h3>
-			    <p>All this modern technology just makes people try to do everything at once.</p>
 			    <div class="price">
 			      <s>$24.00</s>$19.00
 			    </div>
@@ -103,7 +138,6 @@
 			<figure class="product-card"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="sample98" />
 			  <figcaption>
 			    <h3>Kurie Secco</h3>
-			    <p>To make a bad day worse, spend it wishing for the impossible.</p>
 			    <div class="price">
 			      <s>$29.00</s>$39.00
 			    </div>
@@ -123,7 +157,6 @@
 			  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample90.jpg" alt="sample90" />
 			  <figcaption>
 			    <h3>Zosaisan Invec</h3>
-			    <p>Why should I have to work for everything? It's like saying that I don't deserve it.</p>
 			    <div class="price">
 			      <s>$35.00</s>$45.00
 			    </div>
@@ -140,22 +173,21 @@
 			</figure>
 
 			<figure class="product-card">
-			  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample90.jpg" alt="sample90" />
-			  <figcaption>
-			    <h3>Zosaisan Invec</h3>
-			    <p>Why should I have to work for everything? It's like saying that I don't deserve it.</p>
-			    <div class="price">
-			      <s>$35.00</s>$45.00
-			    </div>
-			  </figcaption>
-			  <div class="rating">
-				  <div class="stars">
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star"></a>
-				    <a class="star"></a>
-				  </div>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample90.jpg" alt="sample90" />
+			  	<figcaption>
+				    <h3>Zosaisan Invec</h3>
+				    <div class="price">
+				    	<s>$35.00</s>$45.00
+				    </div>
+			  	</figcaption>
+			  	<div class="rating">
+				  	<div class="stars">
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star rated"></a>
+					    <a class="star"></a>
+					    <a class="star"></a>
+				  	</div>
 				</div>
 			</figure>
 		</div>
