--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,18 @@
   margin:200px auto;
   width: 60%;
 }
+
+
+
+.nav-item{
+  
+  display: inline;
+  font-weight: bold;
+  color: #000;
+  text-decoration: none;
+}
+
+.nav-item:hover{
+  text-decoration:none;
+}
+
