--- a/views/card.html
+++ b/views/card.html
@@ -1,44 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title></title>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="../js/script.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-	<div class="container">
+<div ng-controller='NavigationController'>
+		<div class="row">
+			<div class="col-md-12">
+				<nav class="nav-bar">
+					<a href="#" class="nav-item">Home</a>
+					<a href="#" class="nav-item">About</a>
+				</nav>
+			</div>
+		</div>
+	</div>
+	
+	<div ng-controller='ProductDetail' class="container">
 		<div class="product-detail">
 				<div class="col-lg-6">
 						<div id="slides_container">
 						  <div id="slides">
-						    <div class="slide" style="background-image: url(http://loremflickr.com/320/240?random=1);"></div>
-						    <div class="slide" style="background-image: url(http://loremflickr.com/320/240?random=2);"></div>
-						    <div class="slide" style="background-image: url(http://loremflickr.com/320/240?random=3);"></div>
-						    <div class="slide" style="background-image: url(http://loremflickr.com/320/240?random=4);"></div>  
-						    <div class="slide" style="background-image: url(http://loremflickr.com/320/240?random=5);"></div>
-						    <div class="slide" style="background-image: url(http://loremflickr.com/320/240?random=6);"></div>
+						    <div class="slide" style="background-image: url({{ imagen1 }});"></div>
+						    <div class="slide" style="background-image: url({{ imagen2 }});"></div>
+						    <div class="slide" style="background-image: url({{ imagen3 }});"></div>
+						    <div class="slide" style="background-image: url({{ imagen4 }});"></div>  
+						    <div class="slide" style="background-image: url({{ imagen5 }});"></div>
 						  </div>
 						</div>
 
 						<div id="slides_controls">
-						  <label style="background-image: url(http://loremflickr.com/320/240?random=1);"><input type="radio" name="slides_controls" /></label>
-						  <label style="background-image: url(http://loremflickr.com/320/240?random=2);"><input type="radio" name="slides_controls" /></label>
-						  <label style="background-image: url(http://loremflickr.com/320/240?random=3);"><input type="radio" name="slides_controls" /></label>
-						  <label style="background-image: url(http://loremflickr.com/320/240?random=4);"><input type="radio" name="slides_controls" /></label>
-						  <label style="background-image: url(http://loremflickr.com/320/240?random=5);"><input type="radio" name="slides_controls" /></label>
-						  <label style="background-image: url(http://loremflickr.com/320/240?random=6);"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ imagen1 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ imagen2 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ imagen3 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ imagen4 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ imagen5 }});"><input type="radio" name="slides_controls" /></label>
 						</div>
 
 				</div>
 				<div class="col-lg-6">
-					<h2>Titulo</h2>
-					<p>	Fecha Publicacion</p>
-					<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui consequatur et ducimus quaerat quidem rerum dolorem velit repudiandae tempore itaque ex cumque non voluptate odit quia, nemo fuga soluta. Id?</p>
+					<h2> {{title}}</h2>
+					<p>	{{ date }}</p>
+					<p>	{{ description }}</p>
+					<p> {{ price }}</p>
 					<div class="rating">
 						<div class="stars">
 							<a class="star rated"></a>
@@ -51,5 +48,3 @@
 				</div>
 		</div>
 	</div>
-</body>
-</html>
