--- a/views/index.html
+++ b/views/index.html
@@ -4,193 +4,19 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Listado</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="../js/script.js"></script>
+	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-	<section class="destacados">
-		<div class="container ">
-			<h2>Productos Descatados</h3>
-			<div class="destacados--container">
-				<article class="destacado">
-					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
-					<div class="destacado--description">
-						<h4 class="destacado--title">lalalala</h4>
-						<div class="destacado--price">
-							$39.00
-						</div>
-					</div>
-					<div class="rating rating-destacado">
-					  <div class="stars stars-destacado">
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star"></a>
-					    <a class="star"></a>
-					  </div>
-					</div>
-				</article>
+<body ng-app='My-App'>
+	
+	
 
-
-				<article class="destacado">
-					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
-					<div class="destacado--description">
-						<h4 class="destacado--title">lalalala</h4>
-						<div class="destacado--price">
-							$39.00
-						</div>
-					</div>
-					<div class="rating rating-destacado">
-					  <div class="stars stars-destacado">
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star"></a>
-					    <a class="star"></a>
-					  </div>
-					</div>
-				</article>
-
-				<article class="destacado">
-					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
-					<div class="destacado--description">
-						<h4 class="destacado--title">lalalala</h4>
-						<div class="destacado--price">
-							$39.00
-						</div>
-					</div>
-					<div class="rating rating-destacado">
-					  <div class="stars stars-destacado">
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star"></a>
-					    <a class="star"></a>
-					  </div>
-					</div>
-				</article>
-
-				<article class="destacado">
-					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
-					<div class="destacado--description">
-						<h4 class="destacado--title">lalalala</h4>
-						<div class="destacado--price">
-							$39.00
-						</div>
-					</div>
-					<div class="rating rating-destacado">
-					  <div class="stars stars-destacado">
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star"></a>
-					    <a class="star"></a>
-					  </div>
-					</div>
-				</article>
-
-				<article class="destacado">
-					<img class="destacado--img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="">
-					<div class="destacado--description">
-						<h4 class="destacado--title">lalalala</h4>
-						<div class="destacado--price">
-							$39.00
-						</div>
-					</div>
-					<div class="rating rating-destacado">
-					  <div class="stars stars-destacado">
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star"></a>
-					    <a class="star"></a>
-					  </div>
-					</div>
-				</article>
-			</div>
-		</div>
-	</section>
-	<section>
-		<div class="container">
-			<figure class="product-card">
-			  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample57.jpg" alt="sample57" />
-			  <figcaption>
-			    <h3>Pudol Doux</h3>
-			    <div class="price">
-			      <s>$24.00</s>$19.00
-			    </div>
-			  </figcaption>
-			  <div class="rating">
-				  <div class="stars">
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star"></a>
-				    <a class="star"></a>
-				  </div>
-				</div>
-			</figure>
-
-
-			<figure class="product-card"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample98.jpg" alt="sample98" />
-			  <figcaption>
-			    <h3>Kurie Secco</h3>
-			    <div class="price">
-			      <s>$29.00</s>$39.00
-			    </div>
-			  </figcaption>
-			    <div class="rating">
-				  <div class="stars">
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star"></a>
-				    <a class="star"></a>
-				  </div>
-				</div>
-			</figure>
-
-			<figure class="product-card">
-			  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample90.jpg" alt="sample90" />
-			  <figcaption>
-			    <h3>Zosaisan Invec</h3>
-			    <div class="price">
-			      <s>$35.00</s>$45.00
-			    </div>
-			  </figcaption>
-			  <div class="rating">
-				  <div class="stars">
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star"></a>
-				    <a class="star"></a>
-				  </div>
-				</div>
-			</figure>
-
-			<figure class="product-card">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample90.jpg" alt="sample90" />
-			  	<figcaption>
-				    <h3>Zosaisan Invec</h3>
-				    <div class="price">
-				    	<s>$35.00</s>$45.00
-				    </div>
-			  	</figcaption>
-			  	<div class="rating">
-				  	<div class="stars">
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star rated"></a>
-					    <a class="star"></a>
-					    <a class="star"></a>
-				  	</div>
-				</div>
-			</figure>
-		</div>
-	</section>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
+	<script src="../js/script.js"></script>
 </body>
 </html>
