--- a/views/card.html
+++ b/views/card.html
@@ -1,13 +1,3 @@
-<div ng-controller='NavigationController'>
-		<div class="row">
-			<div class="col-md-12">
-				<nav class="nav-bar">
-					<a href="#" class="nav-item">Home</a>
-					<a href="#" class="nav-item">About</a>
-				</nav>
-			</div>
-		</div>
-	</div>
 	
 	<div ng-controller='ProductDetail' class="container">
 		<div class="product-detail">
@@ -36,6 +26,9 @@
 					<p>	{{ date }}</p>
 					<p>	{{ description }}</p>
 					<p> {{ price }}</p>
+					<div ng-if="product.featured">
+						<h1>ES FEATURED</h1>
+					</div>
 					<div class="rating">
 						<div class="stars">
 							<a class="star rated"></a>
