--- a/views/index.html
+++ b/views/index.html
@@ -11,10 +11,68 @@
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body ng-app='My-App'>
-	
-	
 
+	<div ng-controller='NavigationController'>
+		<div class="row">
+			<div class="col-md-12">
+				<nav class="nav-bar">
+					<a href="#" class="nav-item">Home</a>
+					<a href="#" class="nav-item">About</a>
+				</nav>
+			</div>
+		</div>
+	</div>
 	
+<!--VIEW -->
+		
+	<div ng-controller='ProductDetail' class="container">
+		<div class="product-detail">
+				<div class="col-lg-6">
+						<div id="slides_container">
+						  <div id="slides">
+						    <div class="slide" style="background-image: url({{ product.imagen1 }});"></div>
+						    <div class="slide" style="background-image: url({{ product.imagen2 }});"></div>
+						    <div class="slide" style="background-image: url({{ product.imagen3 }});"></div>
+						    <div class="slide" style="background-image: url({{ product.imagen4 }});"></div>  
+						    <div class="slide" style="background-image: url({{ product.imagen5 }});"></div>
+						  </div>
+						</div>
+
+						<div id="slides_controls">
+						  <label style="background-image: url({{ product.imagen1 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ product.imagen2 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ product.imagen3 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ product.imagen4 }});"><input type="radio" name="slides_controls" /></label>
+						  <label style="background-image: url({{ product.imagen5 }});"><input type="radio" name="slides_controls" /></label>
+						</div>
+
+				</div>
+				<div class="col-lg-6">
+					<h2> {{ product.title }}</h2>
+					<p>	{{ product.date }}</p>
+					<p>	{{ product.description }}</p>
+					<p> {{ product.price }}</p>
+					<div ng-show="product.featured">
+						<h1>ES FEATURED</h1>
+					</div>
+					<div class="rating">
+						<div class="stars">
+							<a class="star rated"></a>
+							<a class="star rated"></a>
+							<a class="star rated"></a>
+							<a class="star"></a>
+							<a class="star"></a>
+						</div>
+					</div>
+				</div>
+		</div>
+	</div>
+
+
+
+
+
+<!-- FIN VIEW -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="../node_modules/angular/angular.min.js"></script>
 	<script src="../js/script.js"></script>
